# bayesian-wq-calibration

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
bayesian_wq_calibration/: analysis.py  calibration.py  constants.py  data.py  epanet.py  ga.py  mcmc.py  plotting.py  simulation.py
data/: README.md
data/devices/: .~lock.pressure_device_database.xlsx#  flow_device_database.xlsx  pressure_device_database.xlsx  wq_device_database.xlsx
data/filtered/: 02-flow.csv  04-flow.csv  04-pressure.csv  04-wq.csv  05-flow.csv  05-pressure.csv  05-wq.csv  06-flow.csv  06-pressure.csv  07-wq.csv  08-flow.csv  (+30 more)
notebooks/: 01-data-period-features.ipynb  02-GA-model-calibration.ipynb  02-pipe-grouping-exploration.ipynb  03-GA-model-calibration.ipynb  03-GP-surrogate-modelling-obsolete.ipynb  03-GP-surrogate-modelling.ipynb  04-GP-surrogate-modelling.ipynb  05-MCMC-model-calibration.ipynb
results/: calibrated-coefficients-period-16.csv  calibrated_coefficients.csv  fm-curves-period-18-day-0.csv  fm-curves-period-19-day-0.csv  fm-curves-period-19-day-00.csv  fm-curves-period-20-day-0.csv  ga_calibration.xlsx
scripts/: ccwi-2025.jl  check-data.py  eki-calibration.jl  eki-example.jl  filter_data.py  get-eki-stats.jl  get-gp-stats.jl  get-mcmc-stats.jl  gp-emulator.jl  hydraulic-calibration-dma.py  hydraulic-calibration-full.py  hydraulic-calibration.py  impute-data.py  mcmc-sampling-manual.jl  mcmc-sampling-turing.jl  mcmc-sampling.jl  misc-plotting.py  nwwc-2025.py  optimal-prv-control.py  process-data.py  process_data.py  temp.py  wq-calibration-eki.jl
(+133 files in other folders)
