[tool.poetry]
name = "bayesian-wq-calibration"
version = "0.1.0"
description = ""
authors = ["bradleywjenks <b.jenks21@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
numpy = "~1.26.4"
plotly = "^5.24.1"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"
networkx = "^3.3"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
dtaidistance = "^2.3.12"
deap = "^1.4.1"
cvxpy = "^1.5.3"
gurobipy = "^11.0.3"
pyomo = "^6.8.0"
idaes-pse = "^2.6.0"
pydoe = "^0.3.8"
torch = "^2.5.1"
gpytorch = "^1.13"
tqdm = "^4.67.1"
joblib = "^1.4.2"
kaleido = "0.2.1"
emcee = "^3.1.6"
pymc = "^5.19.1"
blis = "^1.1.0"
arviz = "^0.20.0"
theano = "^1.0.5"
pytensor = "^2.26.4"
wntr = {path = "/Users/bradwjenks/Code/tools/WNTR"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
